# yProvStore-cli

./: .gitignore  CLI_MANUAL.md  README.md  prepare_cli.bat  prepare_cli.sh  pyproject.toml
src/: pyproject.toml  yprov_cli.py
src/commands/: auth.py  blockchain.py  pids.py
src/commands/artifacts/: __init__.py  artifacts.py
src/commands/documents/: __init__.py  bundle.py  documents.py  graph.py  metadata.py  permissions.py
src/utils/: api_client.py
src/utils/blockchain/: fabric.py
src/utils/blockchain/lib/: package-lock.json  package.json  tsconfig.json
src/utils/blockchain/lib/src/: connect.ts  createResource.ts  gatewayHelper.ts  getAll.ts  readResource.ts  wrapper.ts
